# dotcraft

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_EN.md  README_ZH.md  build-linux.bat  build.bat  build_app.bat  build_linux.bat  build_tui.bat  bump-version.bat  dotcraft.sln  link-skills.bat
.github/: release_template.md
desktop/: README.md  README_ZH.md  electron.vite.config.ts  package-lock.json  package.json  start.bat  start_websocket.bat  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
docs/: acp_guide.md  agui_guide.md  api_guide.md  appserver_guide.md  automations_guide.md  config_guide.md  dash_board_guide.md  desktop_guide.md  external_cli_subagents_guide.md  getting-started.md  github_tracker_guide.md  hooks_guide.md  hub_guide.md  index.md  package-lock.json  package.json  qq_bot_guide.md  reference.md  settings-lifecycle.md  subagents_guide.md  tui_guide.md  typescript-channel-module-host-integration.md  typescript-module-integration.md  unity_guide.md  wecom_guide.md
scripts/: bump-version.ps1  install_to_path.ps1  link-skills.ps1
sdk/python/: ARCHITECTURE.md  README.md  README_ZH.md  pyproject.toml
sdk/python/dotcraft_wire/: __init__.py  adapter.py  client.py  models.py  transport.py  turn_reply.py
sdk/python/examples/telegram/: README.md  README_ZH.md  config.example.json  requirements.txt
sdk/python/examples/telegram/dotcraft_telegram/: __init__.py  __main__.py  bot.py  formatting.py  telegram_media_tools.py
sdk/python/tests/: test_adapter.py
specs/: appserver-protocol.md  automations-lifecycle.md  desktop-channel-modules-m1-manifest-and-build-pipeline.md  desktop-channel-modules-m2-discovery-and-config-ui.md  desktop-channel-modules-m3-subprocess-lifecycle.md  desktop-channel-modules-m4-weixin-qr-setup.md  desktop-channel-modules-m5-variants-refresh-polish.md  desktop-client.md  hub-m1-shell.md  (+46 more)
tui/: Cargo.toml  README.md  README_ZH.md  build.rs
tui/src/: clipboard.rs  hub.rs  lib.rs  main.rs  terminal.rs
tui/src/app/: commands.rs  event_mapper.rs  input_router.rs  mod.rs  state.rs  token_tracker.rs
tui/src/i18n/: en.rs  mod.rs  zh.rs
tui/src/theme/: config.rs  default.rs  mod.rs
tui/src/ui/: chat_view.rs  footer_line.rs  highlight.rs  input_editor.rs  layout.rs  markdown.rs  mod.rs  plan_panel.rs  side_panel.rs  status_bar.rs  status_indicator.rs  stream_collector.rs  subagent_table.rs  tool_format.rs  welcome_screen.rs
tui/src/ui/overlays/: approval.rs  command_popup.rs  help.rs  mod.rs  model_picker.rs  notification.rs  thread_picker.rs
tui/src/wire/: client.rs  error.rs  mod.rs  transport.rs  types.rs
(+1479 files in other folders)
