[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotcraft-wire"
version = "0.1.3"
description = "Python SDK for the DotCraft AppServer Wire Protocol (JSON-RPC 2.0)"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dotcraft_wire*"]
